quest styling tweaks

--- a/src/quest_manager/templates/quest_manager/base.html
+++ b/src/quest_manager/templates/quest_manager/base.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content_first %}{% endblock %}
-{% block heading %}{% block heading_inner %}{% endblock%}<i class="fa fa-shield pull-right"></i>{% endblock %}
+{% block heading %}<i class="fa fa-shield pull-right"></i>{% block heading_inner %}{% endblock%}{% endblock %}
 
 {% block content %}{% endblock %}
 {% block js %}{% endblock %}
