--- a/src/quest_manager/templates/quest_manager/tab_quests_submission.html
+++ b/src/quest_manager/templates/quest_manager/tab_quests_submission.html
@@ -26,7 +26,7 @@
         <div class="row">
           <h4 class="panel-title">
             <div class="col-xs-1">
-              <img class="media-object panel-title-img" src="{{ s.quest.icon_url|default_if_none:'#' }}" alt="icon"/>
+              <img class="panel-title-img" src="{{ s.quest.icon_url|default_if_none:'#' }}" alt="icon"/>
             </div>
             <div class="col-xs-5">{{s.quest.name}}</div>
             <div class="col-xs-1">{{s.quest.xp}}  </div>
