--- a/src/quest_manager/templates/quest_manager/quest_detail_content.html
+++ b/src/quest_manager/templates/quest_manager/quest_detail_content.html
@@ -1,11 +1,21 @@
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-xs-12">
-    <img class="media-object pull-left quest-icon" src="{{ quest.icon_url|default_if_none:'#' }}" alt="icon" height="45px"/>
+    <img class="pull-left quest-icon" src="{{ quest.icon_url|default_if_none:'#' }}" alt="icon" height="45px"/>
     </p>{{ quest.short_description }}</p>
   </div>
+</div> -->
+<div class="media">
+  <div class="media-left">
+    <img class="media-object icon-lg" src="{{ quest.icon_url|default_if_none:'#' }}" alt="icon" />
+  </div>
+  <div class="media-body">
+    {{ quest.short_description }}
+  </div>
 </div>
-<div class="panel panel-primary">
+
+
+<div class="panel panel-primary panel-top">
   <div class="panel-heading">
     <h3 class="panel-title">Quest Instructions</h3>
   </div>
