--- a/src/quest_manager/templates/quest_manager/comments.html
+++ b/src/quest_manager/templates/quest_manager/comments.html
@@ -2,30 +2,28 @@
 {% load comment_tags %}
 
   {% for comment in target_comments %}
-    <!-- <li class="list-group-item avatar-left-sm" id="comment-{{comment.id}}">
-      <img class="avatar" src="{{comment.user.profile.avatar.url}}" alt="avatar"/>
-      <div class="comment-heading">
-        <a href="{% url 'profiles:profile_detail' comment.user.profile.id %}">{{comment.user}}</a>
-        &mdash; {{comment.timestamp|timesince}} ago
-        <hr/>
-      </div>
-      <div class="comment-text">
-        {{comment.text|safe}}
-      </div>
-    </li> -->
-    <li class="list-group-item" id="comment-{{comment.id}}">
-      <div class="media">
-        <div class="media-left">
-          <img class="media-object icon-md" src="{{comment.user.profile.avatar.url}}" alt="avatar"/>
+    {% if request.user.is_staff or not comment.flagged %}
+      <li class="list-group-item {% if comment.flagged %} list-group-item-danger{% endif %}"
+          id="comment-{{comment.id}}">
+        <div class="media">
+          <div class="media-left">
+            <img class="media-object icon-md" src="{{comment.user.profile.avatar.url}}" alt="avatar"/>
+          </div>
+          <div class="media-body">
+            {% if request.user.is_staff %}
+              {% if comment.flagged %}
+              <a class='btn btn-success btn-xs pull-right' href="{% url 'comments:unflag' comment.id %}"><i class="fa fa-flag"></i></a>
+              {% else %}
+              <a class='btn btn-danger btn-xs pull-right' href="{% url 'comments:flag' comment.id %}"><i class="fa fa-flag"></i></a>
+              {% endif %}
+            {% endif %}
+            <h5 class="media-heading">  <a href="{% url 'profiles:profile_detail' comment.user.profile.id %}">{{comment.user}}</a>
+              <small>&ndash; {{comment.timestamp|timesince}} ago</small>
+              {% if comment.flagged %} FLAGGED {% endif %}
+            </h5>
+              {{comment.text}}
+          </div>
         </div>
-        <div class="media-body">
-          {% if request.user.is_staff %}
-            <a class='btn btn-danger btn-xs pull-right' href="{% url 'comments:flag' comment.id %}"><i class="fa fa-flag"></i></a>
-          {% endif %}
-          <h5 class="media-heading">  <a href="{% url 'profiles:profile_detail' comment.user.profile.id %}">{{comment.user}}</a>
-            <small>&ndash; {{comment.timestamp|timesince}} ago</small></h5>
-            {{comment.text}}
-        </div>
-      </div>
-    </li>
+      </li>
+    {% endif %}
   {% endfor %}
