--- a/src/quest_manager/templates/quest_manager/buttons.html
+++ b/src/quest_manager/templates/quest_manager/buttons.html
@@ -1,12 +1,25 @@
 <div class="pull-right">
-  {% if not no_details %}
-    <a class="btn btn-info" href="{% url 'quests:quest_detail' q.id %}" role="button">View Details</a>
-  {% endif %}
   {% if  request.user.is_staff %}
-    <a class="btn btn-danger" href="{% url 'quests:quest_delete' q.id %}" role="button">Delete</a>
-    <a class="btn btn-warning" href="{% url 'quests:quest_update' q.id %}" role="button">Edit</a>
+    <a class="btn btn-info" href="{% url 'quests:quest_detail' q.id %}" role="button">
+      <i class="fa fa-eye"></i>
+    </a>
+    <a class="btn btn-warning" href="{% url 'quests:quest_update' q.id %}" role="button">
+      <i class="fa fa-edit"></i>
+    </a>
+    <a class="btn btn-primary" href="{% url 'quests:quest_copy' q.id %}" role="button">
+      <i class="fa fa-copy"></i>
+    </a>
+    <a class="btn btn-danger" href="{% url 'quests:quest_delete' q.id %}" role="button">
+      <i class="fa fa-trash-o"></i>
+    </a>
+
+    <!-- <a class="btn btn-warning" href="{% url 'quests:quest_update' q.id %}" role="button">Edit</a>
     <a class="btn btn-primary" href="{% url 'quests:quest_copy' q.id %}" role="button">Copy</a>
+    <a class="btn btn-danger" href="{% url 'quests:quest_delete' q.id %}" role="button">Delete</a> -->
   {% else %}
+    {% if not no_details %}
+      <a class="btn btn-info" href="{% url 'quests:quest_detail' q.id %}" role="button">View Details</a>
+    {% endif %}
     <a class="btn btn-primary" href="{% url 'quests:start' q.id %}" role="button">Start Quest</a>
   {% endif %}
 </div>
