--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -26,6 +26,7 @@
 
 
         {% if request.user.is_authenticated and request.user.is_staff %}
+        <li><a href="/admin">Django Admin</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
           <ul class="dropdown-menu">
