new course working with unique_together

--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -154,12 +154,16 @@ form .panel-body {
 
 
 /************ALERTS *************************/
-.alert:first-of-type {
+.alert-dismissable:first-of-type {
   margin-top: 10px;
 }
 
-.alert {
+.alert .alert-dismissable {
   margin-bottom: 0px;
+}
+
+.alert-block ul {
+  padding-left: 20px;
 }
 
 /******** Bootstrap Tables ******************************/
