--- a/src/courses/templates/courses/coursestudent_form.html
+++ b/src/courses/templates/courses/coursestudent_form.html
@@ -3,14 +3,15 @@
 
 {% block head_title%}{% if title %}{{ title }}{% endif %}{% endblock%}
 
-{% block heading_inner %}Add a new course{% endblock %}
+{% block heading_inner %}Join a course{% endblock %}
 
 {% block content %}
+<p>Please enter information about your course as it appears on your schedule</p>
 <div class="row">
   <div class="col-sm-6">
     <form method="post">{% csrf_token %}
         {{ form | crispy }}
-        <input type="submit" value="Create" />
+        <input type="submit" value="Join" />
     </form>
   </div>
 </div>
