--- a/src/templates/navbar-fixed.html
+++ b/src/templates/navbar-fixed.html
@@ -75,7 +75,13 @@
           <ul class="dropdown-menu" id="notification_dropdown">
           </ul>
         </li>
-        <li class="dropdown">
+        <li>
+          <a href="{% url 'profiles:profile_detail' request.user.id %}">
+            <i class="fa fa-user{% if request.user.is_staff %}-secret{%endif%}"></i>
+            &nbsp; {{ request.user }} 
+          </a>
+        </li>
+        <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"
             role="button" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-user{% if request.user.is_staff %}-secret{%endif%}"></i>
@@ -91,7 +97,7 @@
             <li><a href="{% url 'profiles:profile_detail' request.user.id %}">View Profile</a></li>
             <li><a href="{% url 'notifications:list'%}">Notifications</a></li>
           </ul>
-        </li>
+        </li> -->
 
         <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
         {% else %}
