--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -41,12 +41,12 @@
             X | 1000
           </div>
         </div> -->
-        <div class="pull-right"> x | 1000</div>
-        <div>Group </div>
-        <div class="progress progress-xp">progress
-          <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
-              style="width: 60%;">progress-bar
-            <span class="sr-only">60% Complete</span>
+        <div class="pull-right"> {{object.get_xp}} | 1000</div>
+        <div>{{courses.0.course}} {{courses.0.grade}} </div>
+        <div class="progress progress-xp">{{object.get_xp}}
+          <div class="progress-bar" role="progressbar" aria-valuenow="{{object.get_xp}}" aria-valuemin="0" aria-valuemax="1000"
+              style="width: {% widthratio object.get_xp 1000 100 %}%;">{% widthratio object.get_xp 1000 100%}percent
+            <span class="sr-only">{{object.get_xp}}% Complete</span>
           </div>
         </div>
 
