--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -16,7 +16,7 @@
       <div class="panel-heading">
 
         <h3 class="panel-title">
-          <div class="pull-right">Rank:  XP: </div>
+          <div class="pull-right"> Rank: </div>
           {{object.first_name}}
           {% if object.preferred_name %} ({{ object.preferred_name}}) {% endif %}
           {{object.last_name}}{% if object.alias %}, aka {{ object.alias}}{% endif %}
@@ -43,15 +43,15 @@
         </div> -->
         <div class="pull-right"> {{object.get_xp}} | 1000</div>
         <div>{{courses.0.course}} {{courses.0.grade}} </div>
-        <div class="progress progress-xp">{{object.get_xp}}
+        <div class="progress progress-xp">&nbsp; {% widthratio object.get_xp 1000 100 %}&#37;
           <div class="progress-bar" role="progressbar" aria-valuenow="{{object.get_xp}}" aria-valuemin="0" aria-valuemax="1000"
-              style="width: {% widthratio object.get_xp 1000 100 %}%;">{% widthratio object.get_xp 1000 100%}percent
-            <span class="sr-only">{{object.get_xp}}% Complete</span>
+              style="width: {% widthratio object.get_xp 1000 100 %}%;">
+            <span class="sr-only">{% widthratio object.get_xp 1000 100 %}% Complete</span>
           </div>
         </div>
 
         <div class="pull-right"> x | 1000</div>
-        <div>Group </div>
+        <div>Next Rank </div>
         <div class="progress progress-xp">progress
           <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
               style="width: 60%;">progress-bar
