--- a/src/courses/templates/courses/rank_list.html
+++ b/src/courses/templates/courses/rank_list.html
@@ -7,18 +7,24 @@
 {% block heading %}<i class="fa fa-star pull-right"></i>Ranks{% endblock %}
 
 {% block content %}
-<table class="table table-striped">
-  <tr>
-    <th>Rank</th><th>XP</th>
-  </tr>
-  {% for object in object_list %}
-    <tr>
-      <td>{{object.title}}</td>
-      <td>{{object.xp}} XP</td>
-    </tr>
-  {% endfor %}
-</table>
-
+<div class="row">
+  <div class="col-sm-6">
+    <table class="table table-striped">
+      <tr>
+        <th></th>
+        <th>Rank</th>
+        <th>XP</th>
+      </tr>
+      {% for object in object_list %}
+        <tr>
+          <td class="text-center"><i class="{{object.fa_icon}} fa-lg fa-fw text-warning"></i></td>
+          <td>{{object.title}}</td>
+          <td>{{object.xp}} XP</td>
+        </tr>
+      {% endfor %}
+    </table>
+  </div>
+</div>
 {% endblock %}
 
 {% block js %}{% endblock %}
