--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -39,13 +39,12 @@ iframe {
   border-radius: 8px;
 }
 
-:target::before
-
 /*********** PROFILE PAGE ********************/
 
 .progress-xp {
   /*margin-left: 10px;
   margin-right: 10px;*/
+  margin-bottom:10px;
 }
 
 /*********** BADGES **************************/
