--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -7,6 +7,10 @@
   background-color: white;
 }
 
+.jumbo-banner {
+  padding-top: 20px;
+}
+
 .main-container {
   min-height: 950px;
   background-color: #FFF;
