--- a/src/profile_manager/templates/profile_manager/profile_detail.html
+++ b/src/profile_manager/templates/profile_manager/profile_detail.html
@@ -7,10 +7,10 @@
 {% block content %}
 
 <div class="row">
-  <div class="col-sm-2">
-    <img class="img-responsive img-rounded center-block" src="{{object.avatar.url}}" alt="avatar"/>
+  <div class="col-sm-3">
+    <img class="icon-avatar img-rounded" src="{{object.get_avatar_url}}" alt="avatar"/>
   </div>
-  <div class="col-sm-10">
+  <div class="col-sm-9">
 
     <div class="panel panel-primary">
       <div class="panel-heading">
@@ -47,7 +47,14 @@
           </div>
         </div> -->
         <div class="pull-right"> {{object.xp}} | 1000</div>
-        <div>{{courses.0.course}} {{courses.0.grade}} </div>
+        <div>
+          {% if courses %}
+            {{courses.0.course}} {{courses.0.grade}}
+          {% else %}
+            You  have not joined a course yet.
+            <a href="{% url 'courses:create' %}">Join a Course</a>
+          {% endif %}
+        </div>
         <div class="progress progress-xp">&nbsp; {% widthratio object.xp 1000 100 %}&#37;
           <div class="progress-bar" role="progressbar" aria-valuenow="{{object.xp}}" aria-valuemin="0" aria-valuemax="1000"
               style="width: {% widthratio object.xp 1000 100 %}%;">
@@ -97,7 +104,7 @@
              {% endfor %}
          {% else %}
            <li class="list-group-item">You have not joined a course yet.
-             <a href="{% url 'courses:create' %}" class="btn btn-info btn-xs" role="button">Join a Course</a>
+             <a href="{% url 'courses:create' %}" class="btn btn-info" role="button">Join a Course</a>
            </li>
          {% endif %}
        </ul>
