--- a/src/quest_manager/templates/quest_manager/comments.html
+++ b/src/quest_manager/templates/quest_manager/comments.html
@@ -7,7 +7,7 @@
           id="comment-{{comment.id}}">
         <div class="media">
           <div class="media-left">
-            <img class="media-object icon-md" src="{{comment.user.profile.avatar.url}}" alt="avatar"/>
+            <img class="media-object icon-md" src="{{comment.user.profile.get_avatar_url}}" alt="avatar"/>
           </div>
           <div class="media-body">
             {% if request.user.is_staff %}
@@ -19,7 +19,7 @@
             {% endif %}
             <h5 class="media-heading">  <a href="{% url 'profiles:profile_detail' comment.user.profile.id %}">{{comment.user}}</a>
               <small>&ndash; {{comment.timestamp|timesince}} ago</small>
-              {% if comment.flagged %} FLAGGED {% endif %}
+              {% if comment.flagged %} FLAGGED (students can't see this comment) {% endif %}
             </h5>
               {{comment.text}}
           </div>
