--- a/src/badges/templates/badges/list.html
+++ b/src/badges/templates/badges/list.html
@@ -5,24 +5,25 @@
 {% block heading_inner %}{{heading}}{% endblock %}
 
 {% block content %}
-
+<hr />
 <div class="row">
+  <h3>Talents</h3>
   {% for badge in badges %}
-  <div class="col-xs-4 col-sm-3 col-md-2">
+  <div class="col-xs-4 col-sm-3 col-md-2 col-badge">
     <div class="thumbnail">
-      <img class="badge-unearned" src="{{badge.icon.url}}" alt="badge icon">
-      <div class="caption text-center">
+      <img class="hackerbadge hackerbadge-unearned" src="{{badge.icon.url}}" alt="badge icon">
+      <div class="caption caption-badge text-center">
         <a href="{% url 'badges:badge_detail' badge.id %}">{{badge.name}}</a>
           {% if request.user.is_staff %}
-          <div class="btn-group " role="group">
-
-            <a class="btn btn-warning btn-sm" href="{% url 'badges:badge_update' badge.id %}" role="button">
+          <br/>
+          <div class="btn-group block" role="group">
+            <a class="btn btn-warning btn-xs" href="{% url 'badges:badge_update' badge.id %}" role="button">
               <i class="fa fa-edit"></i>
             </a>
-            <a class="btn btn-primary btn-sm" href="{% url 'badges:badge_copy' badge.id %}" role="button">
+            <a class="btn btn-primary btn-xs" href="{% url 'badges:badge_copy' badge.id %}" role="button">
               <i class="fa fa-copy"></i>
             </a>
-            <a class="btn btn-danger btn-sm" href="{% url 'badges:badge_delete' badge.id %}" role="button">
+            <a class="btn btn-danger btn-xs" href="{% url 'badges:badge_delete' badge.id %}" role="button">
               <i class="fa fa-trash-o"></i>
             </a>
           </div>
@@ -32,9 +33,4 @@
   </div>
   {% endfor %}
 </div>
-
-{% for badge in badges %}
-<h3>Name: </h3>
-<p>Desc: {{badge.short_description}} </p>
-{% endfor %}
 {% endblock %}
