--- a/src/badges/templates/badges/list.html
+++ b/src/badges/templates/badges/list.html
@@ -1,5 +1,6 @@
 {% extends "badges/base.html" %}
 {% load crispy_forms_tags %}
+{% load webdesign %}
 {% load staticfiles %}
 
 {% block heading_inner %}{{heading}}{% endblock %}
@@ -17,24 +18,31 @@
     <div class="row">
       {% for badge in badges %}
       <div class="col-xs-4 col-sm-3 col-md-2 col-badge">
-        <a href="{% url 'badges:badge_detail' badge.id %}">
-        <div class="thumbnail">
+        <a tabindex="0" class="badge-popover" role="button" data-toggle="popover"
+        data-trigger="focus" data-placement="left" data-html="true"
+        title="<h3 class='panel-title'>{{badge.name}}</h3>"
+        data-content='
+        <p>{{badge.short_description}}</p>
+        <p>XP: {{badge.xp}}</p>
+        <p>Series: {{badge.series}}</p>
+        {% if request.user.is_staff %}
+        <div class="btn-group block" role="group">
+          <a class="btn btn-warning " href="{% url 'badges:badge_update' badge.id %}" role="button">
+            <i class="fa fa-edit"></i>
+          </a>
+          <a class="btn btn-primary" href="{% url 'badges:badge_copy' badge.id %}" role="button">
+            <i class="fa fa-copy"></i>
+          </a>
+          <a class="btn btn-danger" href="{% url 'badges:badge_delete' badge.id %}" role="button">
+            <i class="fa fa-trash-o"></i>
+          </a>
+        </div>
+        {% endif %}
+        '>
+        <div class="thumbnail thumbnail-badge">
           <img class="hackerbadge hackerbadge-unearned" src="{{badge.icon.url}}" alt="badge icon">
           <div class="caption caption-badge text-center">
-              <p>{{badge.name}}</p>
-              {% if request.user.is_staff %}
-              <div class="btn-group block" role="group">
-                <a class="btn btn-warning btn-xs" href="{% url 'badges:badge_update' badge.id %}" role="button">
-                  <i class="fa fa-edit"></i>
-                </a>
-                <a class="btn btn-primary btn-xs" href="{% url 'badges:badge_copy' badge.id %}" role="button">
-                  <i class="fa fa-copy"></i>
-                </a>
-                <a class="btn btn-danger btn-xs" href="{% url 'badges:badge_delete' badge.id %}" role="button">
-                  <i class="fa fa-trash-o"></i>
-                </a>
-              </div>
-              {% endif %}
+            {{badge.name}}
           </div>
         </div>
       </a>
@@ -47,6 +55,13 @@
 
 </div> <!--panel -->
 
+{% endblock %}
+{% block js %}
+<script>
+$(document).ready(function() {
+  $('[data-toggle="popover"]').popover(
 
-
+  )
+});
+</script>
 {% endblock %}
