--- a/src/static_in_project/static_root/css/custom.css
+++ b/src/static_in_project/static_root/css/custom.css
@@ -43,7 +43,16 @@ iframe {
   border-radius: 8px;
 }
 
-/************ BADGES **********************/
+/************ BADGES/Achievements **********************/
+.panel-body-badge {
+  padding-bottom: 0px;
+}
+
+.panel-body-badge > .row {
+  margin-left: -8px;
+  margin-right: -8px;
+}
+
 
 .hackerbadge {
   min-height:64px;
@@ -96,7 +105,7 @@ iframe {
   margin-bottom:10px;
 }
 
-/*********** BADGES **************************/
+/*********** Bootstrap BADGES **************************/
 #notification_badge {
   margin-top:0px;
 }
@@ -121,6 +130,8 @@ iframe {
   background-color: #fff;
   text-shadow: none;
 }
+
+
 
 /************ ICONS **********************/
 
