add ranks as prerequisite

--- a/src/courses/templates/courses/rank_list.html
+++ b/src/courses/templates/courses/rank_list.html
@@ -18,7 +18,7 @@
       {% for object in object_list %}
         <tr>
           <td class="text-center"><i class="{{object.fa_icon}} fa-lg fa-fw text-warning"></i></td>
-          <td>{{object.title}}</td>
+          <td>{{object.name}}</td>
           <td>{{object.xp}} XP</td>
         </tr>
       {% endfor %}
