--- a/src/badges/templates/badges/list.html
+++ b/src/badges/templates/badges/list.html
@@ -15,12 +15,13 @@
 
   <div class="panel-heading">
     <h3 class="panel-title">
-      {{type}}s
+      <i class="pull-right fa {{badges.badge_type.fa_icon}}"></i>
+      {{badges.badge_type.name}}s
     </h3>
   </div>
   <div class="panel-body panel-body-badge">
     <div class="row">
-      {% for badge in badges %}
+      {% for badge in badges.list %}
       <div class="col-xs-4 col-sm-3 col-md-2 col-badge">
         <a tabindex="0" class="badge-popover" role="button" data-toggle="popover"
         data-trigger="focus" data-placement="left" data-html="true"
