--- a/src/badges/templates/badges/list.html
+++ b/src/badges/templates/badges/list.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-{% for type, badges in badge_type_dicts %}
+{% for badges in badge_type_dicts %}
 <div class="panel panel-primary">
 
   <div class="panel-heading">
